Organizaçao da estructura do projeto de testes. Ajuste na LoginPage para obtenção de elementos com locator.

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,9 @@ build/
 ### VS Code ###
 .vscode/
 
-### ENV ###
+### ENV TEST ###
 src/test/resources/env.properties
 
+### ENV MAIN ###
+src/main/resources/env.properties
 
