--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.30.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-support</artifactId>
+			<version>4.30.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
